syntax = "proto3";

package google.protobuf;

option csharp_namespace = "Tracer";

//Data
message CreateFileData {
    
}

message DeleteFileData {
}

message ModifyFileData {
    uint32 offset_start = 1;
    uint32 offset_end = 2;
    string data = 3;
}

message SelectFileData {
}

message CursorChangeFileData {
    uint32 offset_start = 1;
    uint32 offset_end = 2;
}

message RenameFileData {
    string new_file_path = 1;
}
//End Data

message TraceTransaction {
    enum TraceTransactionType {
        CreateFile = 0;
        DeleteFile = 1;
        ModifyFile = 2;
        SelectFile = 3;
        CursorFile = 4;
        RenameFile = 5;
    }

  TraceTransactionType type = 1;
  uint32 time_offset_ms = 2;
  string file_path =  3;

  oneof data {
    CreateFileData create_file = 4;
    DeleteFileData delete_file = 5;
    ModifyFileData modify_file = 6;
    SelectFileData select_file = 7;
    CursorChangeFileData cursor_file = 8;
    RenameFileData rename_file = 9;
  }
}

message TraceTransactionLog {
    uint32 partition = 1;
    repeated TraceTransaction transactions = 2;
}

message TraceProject {
    string id = 1;
    uint32 duration = 2;
    uint32 partition_size = 3;
}